--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
                 <td><%= patient.applicationNumber %></td>
                 <td><a class="" href="/edit/<%= patient._id %>" role="button" style='color:black;'><i class="far fa-edit "></i></a></td>
                 <td><a class="" href="/view/<%= patient._id %>" role="button" style='color:black;'><i class="far fa-eye "></i></a></td>
-                <td><a class="" href="/delete/<%= patient._id %>" role="button" style='color:black;'><i class="fas fa-trash"></i></a></td>
+                <td><a class="" onclick="deletePatient('<%= patient._id %>')" role="button" style='color:black;' data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-trash"></i></a></td>
               </tr>
               <% }) %>
               <% } %>
@@ -52,12 +52,38 @@
             </tbody>
           </table>
             <a role="button" class="btn btn-outline-dark btn-lg mt-5 col-lg-2" href="/new">Add Patient</a>
+            
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete patient</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    Are you sure you want to delete this patient?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a role="button" href="/" class="btn btn-danger" id="delete-btn">Delete</a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           
     </div>
 
 
-
+    <script>
+      function deletePatient(id) {
+        let href = "/delete/" + id;
+        const dbtn = document.getElementById("delete-btn");
+        dbtn.href = href;
+      }
+    </script>
     <script src="https://kit.fontawesome.com/7b6c0285c8.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
